// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Upload  Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      id="example-input-id-1"
      name="file-upload-name"
      required=""
      type="file"
    />
    <label
      class="ecl-file-upload__button-container"
      for="example-input-id-1"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
      >
        Choose file
      </span>
    </label>
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</jest>
`;

exports[`File Upload  Default renders correctly when disabled 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      disabled=""
      id="example-input-id-1"
      name="file-upload-name"
      required=""
      type="file"
    />
    <label
      class="ecl-file-upload__button-container"
      for="example-input-id-1"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
        disabled=""
      >
        Choose file
      </span>
    </label>
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</jest>
`;

exports[`File Upload  Default renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
          Invalid text
    </div>
    <input
      class="ecl-file-upload ecl-file-upload--invalid"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      id="example-input-id-1"
      name="file-upload-name"
      required=""
      type="file"
    />
    <label
      class="ecl-file-upload__button-container"
      for="example-input-id-1"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
      >
        Choose file
      </span>
    </label>
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</jest>
`;

exports[`File Upload  Default renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      id="example-input-id-1"
      name="file-upload-name"
      required=""
      type="file"
    />
    <label
      class="ecl-file-upload__button-container"
      for="example-input-id-1"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
      >
        Choose file
      </span>
    </label>
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</jest>
`;

exports[`File Upload  Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      data-test="data-test-value"
      data-test-1="data-test-value-1"
      id="example-input-id-1"
      name="file-upload-name"
      required=""
      type="file"
    />
    <label
      class="ecl-file-upload__button-container"
      for="example-input-id-1"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
      >
        Choose file
      </span>
    </label>
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</jest>
`;

exports[`File Upload  Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-class custom-class--test"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      id="example-input-id-1"
      name="file-upload-name"
      required=""
      type="file"
    />
    <label
      class="ecl-file-upload__button-container"
      for="example-input-id-1"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
      >
        Choose file
      </span>
    </label>
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</jest>
`;

exports[`File Upload  Multiple renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label"
      for="example-file-upload-multiple"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      id="example-file-upload-multiple"
      multiple=""
      name="file-upload-name"
      required=""
      type="file"
    />
    <label
      class="ecl-file-upload__button-container"
      for="example-file-upload-multiple"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose files"
        data-ecl-file-upload-label-replace="Replace files"
      >
        Choose files
      </span>
    </label>
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</jest>
`;
